--- a/evoks/theme/templates/term_detail.html
+++ b/evoks/theme/templates/term_detail.html
@@ -1,4 +1,5 @@
 {% load static tailwind_tags %}
+{% load guardian_tags %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -103,6 +104,8 @@
                                                         {{ obj.lang_display }}
                                                         {% endif %}
                                                     </span>
+                                                    {% get_obj_perms user for vocabulary as "vocabulary_perms" %}
+                                                    {% if "owner" in vocabulary_perms or "participant" in vocabulary_perms %} 
                                                     <span class="ml-4">
                                                         <button type="button"
                                                             id="update-button-{{forloop.parentloop.counter}}-{{forloop.counter}}"
@@ -113,6 +116,7 @@
                                                             Update
                                                         </button>
                                                     </span>
+                                                    {% endif %}
                                                 </div>
 
                                             </form>
@@ -197,6 +201,8 @@
                                     </dd>
                                 </div>
                                 </dl>
+                                {% get_obj_perms user for vocabulary as "vocabulary_perms" %}
+                                {% if "owner" in vocabulary_perms or "participant" in vocabulary_perms %}
                                 <div class="py-4 sm:grid sm:py-5 sm:grid-cols-3 sm:gap-4">
                                     <dt class="text-sm font-medium text-regal-blue">
                                     </dt>
@@ -218,12 +224,12 @@
                                         </span>
                                     </dd>
                                 </div>
+                                {% endif %}
                                     <dd class="mt-1 flex text-sm text-gray-900 sm:mt-0 sm:col-span-2">
                                         <span class="flex-grow">
 
                                         </span>
                                         <span class="ml-4 flex-shrink-0">
-                                            {% load guardian_tags %}
                                             {% get_obj_perms user for vocabulary as "vocabulary_perms" %}
                                             {% if "owner" in vocabulary_perms %}  
                                             <button id="delete-term-button"
