--- a/evoks/theme/templates/vocabulary.html
+++ b/evoks/theme/templates/vocabulary.html
@@ -1,4 +1,5 @@
 {% load static tailwind_tags %}
+{% load guardian_tags %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -54,10 +55,13 @@
                                 class="inline-flex items-center px-2.5 py-1.5 border border-gray-300 shadow-sm text-xs font-medium rounded text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-500">
                                 Members
                             </a> 
+                            {% get_obj_perms user for vocabulary as "vocabulary_perms" %}
+                            {% if "owner" in vocabulary_perms or "participant" in vocabulary_perms %}
                             <a href='{% url 'vocabulary_prefixes' voc_name=vocabulary.name %}'
                                 class="inline-flex items-center px-2.5 py-1.5 border border-gray-300 shadow-sm text-xs font-medium rounded text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-500">
                                 Prefixes
                              </a>
+                             {% endif %}
                             <a href='{% url 'vocabulary_settings' voc_name=vocabulary.name %}'
                                 class="inline-flex items-center px-2.5 py-1.5 border border-gray-300 shadow-sm text-xs font-medium rounded text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-500">
                                 Settings
@@ -121,6 +125,8 @@
                                                         {{ obj.lang_display }}
                                                         {% endif %}
                                                     </span>
+                                                    {% get_obj_perms user for vocabulary as "vocabulary_perms" %}
+                                                    {% if "owner" in vocabulary_perms or "participant" in vocabulary_perms %}
                                                     <span class="ml-4">
                                                         <button type="button"
                                                             id="update-button-{{forloop.parentloop.counter}}-{{forloop.counter}}"
@@ -131,6 +137,7 @@
                                                             Update
                                                         </button>
                                                     </span>
+                                                    {% endif %}
                                                 </div>
 
                                             </form>
@@ -228,6 +235,8 @@
                                         </svg>
                                         {% endif %}
                                     </dt>
+                                    {% get_obj_perms user for vocabulary as "vocabulary_perms" %}
+                                    {% if "owner" in vocabulary_perms or "participant" in vocabulary_perms %}
                                     <dd class="mt-1 flex text-sm text-gray-900 sm:mt-0 sm:col-span-2">
                                         <span class="flex-grow">
 
@@ -245,6 +254,7 @@
                                             </button>
                                         </span>
                                     </dd>
+                                    {% endif %}
                                 </div>
                                 </dl>
                             </div>
