--- a/evoks/theme/templates/vocabulary_terms.html
+++ b/evoks/theme/templates/vocabulary_terms.html
@@ -1,4 +1,5 @@
 {% load static tailwind_tags %}
+{% load guardian_tags %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -53,21 +54,27 @@
                             <a href='{% url 'vocabulary_members' voc_name=vocabulary.name %}'
                                 class="inline-flex items-center px-2.5 py-1.5 border border-gray-300 shadow-sm text-xs font-medium rounded text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-500">
                                 Members
-                            </a> 
+                            </a>
+                            {% get_obj_perms user for vocabulary as "vocabulary_perms" %}
+                            {% if "owner" in vocabulary_perms or "participant" in vocabulary_perms %} 
                             <a href='{% url 'vocabulary_prefixes' voc_name=vocabulary.name %}'
                                 class="inline-flex items-center px-2.5 py-1.5 border border-gray-300 shadow-sm text-xs font-medium rounded text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-500">
                                 Prefixes
                              </a>
+                             {% endif %}
                             <a href='{% url 'vocabulary_settings' voc_name=vocabulary.name %}'
                                 class="inline-flex items-center px-2.5 py-1.5 border border-gray-300 shadow-sm text-xs font-medium rounded text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-500">
                                 Settings
                             </a>
                             <main>
                                 <div class="mt-5">
+                                    {% get_obj_perms user for vocabulary as "vocabulary_perms" %}
+                                    {% if "owner" in vocabulary_perms or "participant" in vocabulary_perms %}
                                     <button type="button" id="create-term-button"
                                         class="inline-flex mb-5 items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-white bg-regal-blue focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-500">
                                         Create Term
                                     </button>
+                                    {% endif %}
                                     <label for="letter" class="block text-sm font-medium text-gray-700">Initial
                                         
                                          Letter</label>
