admin delete user

--- a/evoks/theme/templates/team_detail.html
+++ b/evoks/theme/templates/team_detail.html
@@ -207,7 +207,7 @@
                                                             <div class="mt-1">
                                                                 <input type="text" name="description" id="description" maxlength="70"
                                                                     class="shadow-sm focus:ring-gray-500 focus:border-gray-500 block w-full sm:text-sm border-gray-300 rounded-md"
-                                                                    placeholder="{{team.groupprofile.description}}">
+                                                                    value="{{team.groupprofile.description}}">
                                                             </div>
                                                         </div>
                                                         <div class="mt-5">
