--- a/evoks/theme/templates/help_page.html
+++ b/evoks/theme/templates/help_page.html
@@ -69,6 +69,11 @@
                         their mail address. You can kick members by clicking on „kick“ in the listing.
                     </div>
                     <h2 class="text-lg font-bold leading-7 text-gray-900 sm:text-lg sm:truncate">
+                        General max length  </h2>
+                        <div class="text-sm text-gray-900">
+                            General maximum length for inputs for properties in vocabularies and terms is 5000 characters.
+                        </div>
+                    <h2 class="text-lg font-bold leading-7 text-gray-900 sm:text-lg sm:truncate">
                         Other questions </h2>
                     <div class="text-sm text-gray-900">
                         For technical questions, please contact your administrator.
