--- a/evoks/theme/templates/modals/create_property.html
+++ b/evoks/theme/templates/modals/create_property.html
@@ -78,7 +78,7 @@
                                     <div>
                                         <label for="language" class="block text-sm font-medium text-gray-700">Language (en, fi, en-GB according to BCP47) [optional]</label>
                                         <div class="mt-1">
-                                            <input type="text" name="language" id="language"
+                                            <input type="text" name="language" id="language" maxlength=5000
                                                 class="shadow-sm focus:ring-gray-500 focus:border-gray-500 block w-1/2 sm:text-sm border-gray-300 rounded-md"
                                             >
                                         </div>
@@ -86,7 +86,7 @@
                                     <div>
                                         <label for="object" class="block text-sm font-medium text-gray-700">Object</label>
                                         <div class="mt-1">
-                                            <input type="text" name="object" id="text" required
+                                            <input type="text" name="object" id="text" required maxlength=5000
                                                 class="shadow-sm focus:ring-gray-500 focus:border-gray-500 block w-full sm:text-sm border-gray-300 rounded-md"
                                                 placeholder="some value or url">
                                         </div>
