--- a/evoks/theme/templates/vocabulary.html
+++ b/evoks/theme/templates/vocabulary.html
@@ -152,7 +152,7 @@
                                         </dt>
                                         <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
                                             <ul class="border border-gray-200 rounded-md divide-y divide-gray-200">
-                                                <form <form action="#" method="post">
+                                                <form action="#" method="post">
                                                     {% csrf_token %}
                                                     <li class="pl-3 pr-4 py-3 flex items-center justify-between text-sm">
                                                         <div class="w-0 flex-1 flex items-center">
