--- a/evoks/theme/templates/vocabulary_prefixes.html
+++ b/evoks/theme/templates/vocabulary_prefixes.html
@@ -81,7 +81,7 @@
                                                                 Prefixes
                                                             </label>
                                                             <div class="mt-1">
-                                                                <textarea id="about" name="prefixes" rows="20" placeholder="PREFIX skos: <http://www.w3.org/2004/02/skos/core#>"
+                                                                <textarea id="about" name="prefixes" rows="20" placeholder="PREFIX skos: <http://www.w3.org/2004/02/skos/core#>" maxlength=5000
                                                                     class="shadow-sm focus:ring-gray-500 focus:border-gray-500 block w-full sm:text-sm border border-gray-300 rounded-md">{{prefixes}}</textarea>
                                                             </div>
                                                             <p class="mt-2 text-sm text-gray-500">Enter one prefix per
