--- a/evoks/theme/templates/modals/create_term.html
+++ b/evoks/theme/templates/modals/create_term.html
@@ -34,7 +34,7 @@
                                               <span class="inline-flex items-center px-3 rounded-l-md border border-r-0 border-gray-300 bg-gray-50 text-gray-500 sm:text-sm">
                                                 {{vocabulary.urispace}}
                                               </span>
-                                              <input type="text" name="term-subject" id="company-website" class="shadow-sm focus:ring-gray-500 focus:border-gray-500 block w-full sm:text-sm border-gray-300 rounded-r-md" placeholder="scene/010100" maxlength=5000> 
+                                              <input type="text" required name="term-subject" id="company-website" class="shadow-sm focus:ring-gray-500 focus:border-gray-500 block w-full sm:text-sm border-gray-300 rounded-r-md" placeholder="scene/010100" maxlength=5000> 
                                             </div>
                                         </div>
                                         <div>
