--- a/evoks/theme/templates/modals/create_vocabulary.html
+++ b/evoks/theme/templates/modals/create_vocabulary.html
@@ -19,8 +19,6 @@
                         <div class="mt-2">
                             <p class="text-sm text-gray-500">
                                 Enter a vocabulary name and create one from scratch or import an existing vocabulary!
-                                Importing a big vocabulary can take some time. Maximum length of name is 50 characters
-                                and of urispace is 100 characters. Only letters and numbers acceptable for name.
                             </p>
                         </div>
 
@@ -39,20 +37,9 @@
                                                     placeholder="">
                                             </div>
                                         </div>
-
-                                        <div>
-                                            <label for="urispace"
-                                                class="block text-sm font-medium text-gray-700">URISpace [Optional when importing] Has to be a full valid URL. Example: http://kit.edu</label>
-                                            <div class="mt-1">
-                                                <input type="text" name="urispace" id="text" maxlength="100"
-                                                    class="shadow-sm focus:ring-gray-500 focus:border-gray-500 block w-full sm:text-sm border-gray-300 rounded-md"
-                                                    >
-                                            </div>
-                                        </div>
-
                                         <div>
                                             <label for="vocabulary"
-                                                class="block text-sm font-medium text-gray-700">Vocabulary</label>
+                                                class="block text-sm font-medium text-gray-700">Import Vocabulary (optional!)</label>
                                             <div class="mt-1">
                                                 <div
                                                     class="max-w-lg flex justify-center px-6 pt-5 pb-6 border-2 border-gray-300 border-dashed rounded-md">
