remove tags button

--- a/evoks/theme/templates/vocabulary.html
+++ b/evoks/theme/templates/vocabulary.html
@@ -210,9 +210,10 @@
                                             class="relative inline-flex items-center rounded-full border border-gray-300  px-0.5 py-0.5 text-sm bg-regal-blue">
 
                                             <span class="text-white">
-                                                <svg class="inline-block w-5 h-5" fill="none" stroke-linecap="round"
+                                                <!-- HACK: remove tag button with changing numbers to 0 -->
+                                                <svg class="inline-block w-0 h-0" fill="none" stroke-linecap="round"
                                                     stroke-linejoin="round" stroke-width="2" stroke="currentColor"
-                                                    viewBox="0 0 24 24">
+                                                    viewBox="0 0 0 0">
                                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                                         d="M12 6v6m0 0v6m0-6h6m-6 0H6" />
                                                 </svg>
