--- a/evoks/theme/templates/vocabulary.html
+++ b/evoks/theme/templates/vocabulary.html
@@ -36,7 +36,10 @@
             <main class="flex-1 relative focus:outline-none">
                 <div class="py-6">
                     <div class="px-4 sm:px-6 md:px-0 {% if search_results != None %} mt-6 {% endif %}">
-                        <h1 class="text-xl font-semibold text-gray-900">{{ vocabulary.name }}
+                        <h1 class="text-xl font-semibold text-gray-900">
+                            <a href="{% url 'vocabulary_overview' voc_name=vocabulary.name %}">
+                                {{vocabulary.name}}
+                            </a>
                         </h1>
                     </div>
                     <div class="px-4 sm:px-6 md:px-0">
