--- a/evoks/theme/templates/vocabulary_terms.html
+++ b/evoks/theme/templates/vocabulary_terms.html
@@ -36,8 +36,12 @@
             <main class="flex-1 relative focus:outline-none">
                 <div class="py-6">
                     <div class="px-4 sm:px-6 md:px-0">
-                        <h1 class="text-xl font-semibold text-gray-900">{{vocabulary.name}}
+                        <h1 class="text-xl font-semibold text-gray-900">
+                            <a href="{% url 'vocabulary_overview' voc_name=vocabulary.name %}">
+                                {{vocabulary.name}}
+                            </a>
                         </h1>
+                        </a>
                     </div>
                     <div class="px-4 sm:px-6 md:px-0">
                         
