--- a/evoks/theme/templates/term_detail.html
+++ b/evoks/theme/templates/term_detail.html
@@ -41,6 +41,10 @@
             <main class="flex-1 relative focus:outline-none">
                 <div class="py-6">
                     <div class="px-4 sm:px-6 md:px-0">
+                        <a href='{% url 'vocabulary_terms' voc_name=vocabulary.name %}'
+                        class="inline-flex items-center px-2.5 py-1.5 border border-gray-300 shadow-sm text-xs text-regal-blue font-medium rounded text-gray-700 bg-test focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-500">
+                        back to Terms overview
+                        </a>
                         <h1 class="text-xl font-semibold text-gray-900">Term: {{ term.name }}
                         </h1>
                     </div>
