fix create vocabulary text

--- a/evoks/theme/templates/modals/create_vocabulary.html
+++ b/evoks/theme/templates/modals/create_vocabulary.html
@@ -18,7 +18,7 @@
                         </h3>
                         <div class="mt-2">
                             <p class="text-sm text-gray-500">
-                                Enter a vocabulary name and create one from scratch or import an existing vocabulary!
+                                Enter a vocabulary name and create one from scratch or import an existing vocabulary! Only letters and numbers without blanks are supported.
                             </p>
                         </div>
 
