--- a/evoks/theme/templates/term_detail.html
+++ b/evoks/theme/templates/term_detail.html
@@ -43,7 +43,7 @@
                         class="inline-flex items-center px-2.5 py-1.5 border border-gray-300 shadow-sm text-xs text-regal-blue font-medium rounded text-gray-700 bg-test focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-500">
                         back to Terms overview
                         </a>
-                        <h1 class="text-xl font-semibold text-gray-900">Term: {{ term.name }}
+                        <h1 class="text-xl font-semibold text-gray-900">Term: {{ name_stripped }}
                         </h1>
                     </div>
                     <div class="px-4 sm:px-6 md:px-0">
