--- a/evoks/theme/templates/modals/create_vocabulary.html
+++ b/evoks/theme/templates/modals/create_vocabulary.html
@@ -32,7 +32,7 @@
                                             <div class="mt-1">
                                                 <input type="text" name="name" id="text" maxlength="50" required='True'
                                                     pattern="[A-Za-z0-9_-]+"
-                                                    title="Error, non supported characters"
+                                                    title="Error, only letters and numbers without blanks are supported"
                                                     class="shadow-sm focus:ring-gray-500 focus:border-gray-500 block w-full sm:text-sm border-gray-300 rounded-md"
                                                     placeholder="">
                                             </div>
