--- a/evoks/theme/templates/modals/create_property.html
+++ b/evoks/theme/templates/modals/create_property.html
@@ -12,7 +12,7 @@
                 <div>
                     <div class="mt-3 text-center sm:mt-0 sm:text-left">
                         <h3 class="text-lg leading-6 font-medium text-gray-900" id="tag-title">
-                            Create Property
+                            Create Property for current term
                         </h3>
                     </div>
 
@@ -21,7 +21,7 @@
                             <div>
                                 <div class="mt-6 sm:mt-5 space-y-6 sm:space-y-5">
                                     <div>
-                                        <label for="prefix" class="block text-sm font-medium text-gray-700">Namespace</label>
+                                        <label for="prefix" class="block text-sm font-medium text-gray-700">Used Standard</label>
                                         <div class="mt-1">
                                             <select id="prefix" name="prefix"
                                                 class="shadow-sm focus:ring-gray-500 focus:border-gray-500 block w-full sm:text-sm border-gray-300 rounded-md">
