--- a/evoks/theme/templates/modals/create_broader.html
+++ b/evoks/theme/templates/modals/create_broader.html
@@ -12,7 +12,7 @@
                 <div>
                     <div class="mt-3 text-center sm:mt-0 sm:text-left">
                         <h3 class="text-lg leading-6 font-medium text-gray-900" id="tag-title">
-                            Create broader term
+                            Add broader term to current term
                         </h3>
                     </div>
 
@@ -20,11 +20,11 @@
 
 
 
-
+                <!-- display all current terms of vocabulary in dropdown TODO make it faster -->
                 <div>
-                    <label for="term-broader" class="block text-sm font-medium text-gray-700">Broader term [optional]</label>
+                    <label for="broader" class="block text-sm font-medium text-gray-700">Broader term [optional]</label>
                     <div class="mt-1">
-                        <select id="term-broader" name="term-broader"
+                        <select id="broader" name="broader"
                             class="shadow-sm focus:ring-gray-500 focus:border-gray-500 block w-full sm:text-sm border-gray-300 rounded-md">
                             <option selected value="None">None</option>
                             {{% for term in terms_nofilter.data %}
