--- a/evoks/theme/templates/modals/create_property.html
+++ b/evoks/theme/templates/modals/create_property.html
@@ -12,7 +12,7 @@
                 <div>
                     <div class="mt-3 text-center sm:mt-0 sm:text-left">
                         <h3 class="text-lg leading-6 font-medium text-gray-900" id="tag-title">
-                            Create Property
+                            Create Property for current term
                         </h3>
                     </div>
 
