edited text for uri specifications for clarity

--- a/evoks/theme/templates/modals/create_vocabulary.html
+++ b/evoks/theme/templates/modals/create_vocabulary.html
@@ -40,7 +40,7 @@
 
                                         <div>
                                             <label for="urispace"
-                                                class="block text-sm font-medium text-gray-700">URISpace [Optional when importing] Has to be a full valid URL. Example: http://kit.edu</label>
+                                                class="block text-sm font-medium text-gray-700">URISpace [Obsolete when importing] Has to be a full valid URL including trailing slash. Example: http://kit.edu/</label>
                                             <div class="mt-1">
                                                 <input type="text" name="urispace" id="text" maxlength="100"
                                                     class="shadow-sm focus:ring-gray-500 focus:border-gray-500 block w-full sm:text-sm border-gray-300 rounded-md"
